styles.css
body {
    margin: 0;

}

header {
    display: flex;
    flex-direction: column;
    background-color: #7F1DE0;
    /* height: 600px; */
}

header span {
    color: white;
    font-family: 'Kaushan Script', cursive;
}

nav {
    display:flex;
    justify-content: space-between;
    padding: 50px 80px;
}

#logo-icon {
    font-size: 25px;
    padding: 10px;
}
#logo-icon img {
height: 25px;
background-color: white;
padding: 10px;
border-radius: 10%;
}

#logo-icon img:hover {
    background-color: #34E06D;
    /* opacity: 80%; */
    transition: 0.5s;
}

.bot-nav {
    display:flex;
    align-self: center;
    align-items: center;
    margin: 0 0 100px 0;
}

#logo-art {
    background-image: url(Images/LosPic.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 10% 20%;
    color: rgb(0, 0, 0);
    padding: 120px 100px;
    border-radius: 50%;
    background-color:white;
    align-self: center;
}

#greeting {
    font-size: 100px;
}




.divider {
    background-color: #7F1DE0;
    width: 200%;
    padding: 50px;
    --mask:
      radial-gradient(83.01px at 50% calc(100% - 114.75px),#000 99%,#0000 101%) calc(50% - 90px) 0/180px 100%,
      radial-gradient(83.01px at 50% calc(100% + 69.75px),#0000 99%,#000 101%) 50% calc(100% - 45px)/180px 100% repeat-x;
    -webkit-mask: var(--mask);
            mask: var(--mask);
            position: relative;
            animation-name: example;
            animation-duration: 3s;
            animation-timing-function: linear;
            animation-delay: 0s;
            animation-iteration-count: infinite;
            /* animation-direction: alternate; */
  }

  @keyframes example {
    0%   {background-color:#7F1DE0; left:-200px; top:0px;}
    50%  {background-color:#7F1DE0; left:-110px; top:0px;}
    100% {background-color:#7F1DE0; left: -20px; top:0px;}
  }


  /* Custom css for icon logo */
  #css-logo-container{
    transform: scale(.4)
  }
  .css-logo {
    position: absolute;
  }
  
  #div1 {
    height: 100px;
    width: 90px;
    background-color: white;
  }
  #div2 {
    height: 80px;
    width: 100px;
    background-color: #7F1DE0;
    border-top-left-radius: 100px; 
    border-bottom-left-radius: 100px;
    top: 12px;
    left: 30px;
  }
  
  #div3 {
    height: 66px;
    width: 90px;
    background-color: white;
    border-top-left-radius: 100px; 
    border-bottom-left-radius: 100px;
    border-bottom-right-radius: 100px;
    top: 19px;
    left: 40px;
  }
  
  #div4 {
    height: 100px;
    width: 100px;
    background-color: white;
    left: 85px;
  }
  
  #div5 {
    height: 48px;
    width: 80px;
    background-color: #7F1DE0;
    top: 44px;
    left: 85px;
    border-bottom-right-radius: 100px;
    border-top-right-radius: 100px;
  }
  
  #div6 {
    height: 42px;
    width: 50px;
    background-color: #7F1DE0;
    top: 12px;
    left: 114px;
    border-bottom-left-radius: 100px;
    border-top-left-radius: 100px;
    border-bottom-right-radius: 100px;
  }
  
  #div7 {
    height: 31px;
    width: 50px;
    background-color: white;
    border-bottom-right-radius: 100px;
    border-top-right-radius: 100px;
    top: 54px;
    left: 105px;
  }
  
  #div8 {
    height: 31px;
    width: 50px;
    background-color: white;
    border-bottom-left-radius: 100px;
    border-top-left-radius: 100px;
    top: 18px;
    left: 125px;
  }
  
  #div9 {
    height: 20px;
    width: 20px;
    background-color: white;
    border-radius: 100px;
    top: 43px;
    left: 60px;
  }

